Artifacting and glitching on 7840HS/780M on Wayland
Brief summary of the problem:
Laptop: Lenovo 14aPH8 - Ideapad Pro 5.
Flickering, glitchy artifacts on certain screen elements during animations. This has been a recurring driver issue for a while now but upgrading to 6.5.0-35-generic has made it worse.
The issue isn't so bad at lower display resolutions or when VRR is disabled, so I usually update those settings, but having installed a fresh copy of KDE Neon I've not had the luxury of doing that before running into the artifacts again.
Hardware description:
- CPU: 7840HS
- GPU: 63:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Device [1002:15bf] (rev c7)
- System Memory: 32GB
- Display(s): 2880x1800p
- Type of Display Connection: eDP (internal)
System information:
- Distro name and Version: KDE Neon 6. Based on Ubuntu 24.04.1
- Kernel version: 6.5.0-35-generic (64-bit)
- Custom kernel: N/A
- AMD official driver version: N/A
How to reproduce the issue:
Installed fresh copy of KDE Neon 6
Usually spotted first when showing the logout/poweroff dialog. The animations on this screen are notorious for causing artifacting.
Attached files:
Screenshots/video files
Hard to spot as they come and go.
Log files (for system lockups / game freezes / crashes)
N/A